chore: fix code smell