@@ -35,7 +35,6 @@ import java.util.function.Consumer;
 import java.util.function.UnaryOperator;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -187,7 +186,7 @@ public final class PluginUtils {
         List<VirtualFile> parentRoots = Stream.of(sourceRoots)
                 .map(VirtualFile::getParent)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         for (VirtualFile parentRoot : parentRoots) {
             fileIndex.iterateContentUnderDirectory(parentRoot, file -> {
